--- a/eUseControl.BeekeepingStore/Landing/about.html
+++ b/eUseControl.BeekeepingStore/Landing/about.html
@@ -20,13 +20,14 @@
 
         <!--pe-icon-7 Icon -->
         <link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css" />
-
+        ghj
         <!-- Custom  css -->
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     </head>
 
     <body>
+        <h1>ghj</h1>
 
         <header class="sticky">
             <div class="tagline d-none d-lg-block">
