--- a/eUseControl.BeekeepingStore/Landing/index.html
+++ b/eUseControl.BeekeepingStore/Landing/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
+    <h1><hello</h1>
     <meta charset="utf-8" />
     <title>Magazin Apicol</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Magazin Apicol - Produse apicole de calitate" name="description" />
     <meta content="Coderthemes" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+    
     <!-- App favicon -->
     <link rel="shortcut icon" href="images/favicon.ico">
 
